fix: align projects and subprojects menu items

--- a/frontend/src/styles/theme/navigation.scss
+++ b/frontend/src/styles/theme/navigation.scss
@@ -89,7 +89,7 @@
       }
 
       .collapse-project-button-placeholder {
-        width: 1.625rem;
+        width: 2rem; 
         flex-shrink: 0;
       }
 
